--- a/views/enroll_page_payment.ejs
+++ b/views/enroll_page_payment.ejs
@@ -270,7 +270,17 @@
               <p class="card-text">
                 강사에 대한 자세한 세부사항은 아래 상세보기 버튼을 클릭해주세요.
               </p>
-              <a class="btn btn-warning" href="#!">상세보기</a>
+              <button id="modal" onclick="Instructor_info_detail()">
+                상세보기
+              </button>
+              <dialog id="dialog">
+                강사세부정보입니다.<br />
+                <%-Name %><br />
+
+                <form method="dialog">
+                  <button>닫기</button>
+                </form>
+              </dialog>
             </div>
           </div>
           <div class="card mb-4">
