--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -12111,12 +12111,14 @@ legend {
 a{
   text-decoration: none;
 }
-#testimonials{
+.testimonial-box-container{
   display: flex;
   justify-content: center;
-  align-items: center;
-  flex-direction: column;
+  align-items: left;
+  flex-wrap: wrap;
   width:100%;
+  overflow: hidden;
+
 }
 .testimonial-heading{
   letter-spacing: 1px;
