--- a/views/review_page_root.ejs
+++ b/views/review_page_root.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>수강 후기 <%=Title%></title>
+    <title>강좌 후기 <%=Title%></title>
     <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
@@ -69,12 +69,12 @@
     <div class="container px-4 px-lg-5 h-100">
       <div class="row gx-4 gx-lg-5 h-100 align-items-center justify-content-center text-center">
         <div class="col-lg-8 align-self-end">
-          <h1 class="text-white font-weight-bold">수강신청</h1>
+          <h1 class="text-white font-weight-bold">강좌후기</h1>
           <hr class="divider" />
         </div>
         <div class="col-lg-8 align-self-baseline">
           <p class="text-white-75 mb-5">
-            스케줄에 맞춰서 원하는 시간에 수업을 들을 수 있습니다.
+	   코딩나라 강좌의 솔직한 후기를 들어보세요.
           </p>
         </div>
       </div>
